--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ var doodle = (function() {
 	}
 })();
 
-doodle.init("//img1a.flixcart.com/www/promos/new/20140814-202216-plane.png");
+doodle.init("//tk120404.github.io/tricolorplane/plane.png");
     
 </script>
 </body>
